# crypto-lib

./: Cargo.toml  Prover.txt  R_dec.json  R_enc.json  addmt_Prover.txt  dec_Prover.txt  del_Prover.txt  del_inputs.txt  rust_prover.txt  sp_mult.txt  vecadd_Prover.txt  vecsub_Prover.txt  vote_Prover.txt  vote_inputs.txt
scratch/: inputs.txt
src/: additiveeglamal.rs  aes.rs  bjj_ae_elgamal.rs  bjj_ah_elgamal.rs  blindsignature.rs  elgamal.rs  hash.rs  main.rs  merklehelper.rs  signature.rs
