[package]
name = "cryptolib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst= "0.3.10"
rand= "0.8"
sha2 = "0.10.7"
libsecp256k1 = "0.7.1"
aes-gcm = "0.10.2"
babyjubjub-rs = "0.0.10"
lazy_static = "1.4.0"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
num-bigint = "0.4.4"
