[package]
name = "cryptolib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst= "0.3.10"
rand= "0.8"
sha2 = "0.10.7"
libsecp256k1 = "0.7.1"
aes-gcm = "0.10.2"
babyjubjub-rs = "0.0.10"
lazy_static = "1.4.0"
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
num-bigint = "0.4.4"
acvm = "0.25.0"
arkworks-mimc = {version="0.3.0", features=["mimc-7-91-bn254"]}
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-crypto-primitives = "0.4.0"
poseidon-rs = "0.0.10"
